@@ -1,0 +1,13 @@
+# $Id: en-GB.com_acl.ini 11140 2008-10-16 18:17:16Z ircmaxell $
+#@Core
+#@Client Administrator
+#@Version 1.6
+#@Desc Joomla! English(GB)
+#@Date February 2009
+#@Author Joomla! Project
+#@Copyright (C) 2005 - 2008 Open Source Matters. All rights reserved.
+#@License http://www​.gnu.org/l​icenses/gp​l-2.0.html GNU/GPL, see LICENSE.php
+# Note : All ini files need to be saved as UTF-8 - No BOM
+J_EXAMPLE=Example
+J_YES=Yes
+J_NO=No
