@@ -1,0 +1,24 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!-- $Id -->
+<metafile version="1.6"  client="site" >
+	<name>Examplish (Example)</name>
+	<tag>xx-XX</tag>
+	<version>1.6</version>
+	<creationDate>2008-03-15</creationDate>
+	<author>Joomla! Project</author>
+	<authorEmail>admin@joomla.org</authorEmail>
+	<authorUrl>www.joomla.org</authorUrl>
+	<copyright>Copyright (C) 2005 - 2009 Open Source Matters. All rights reserved.</copyright>
+	<license>http://www.gnu.org/licenses/gpl-2.0.html GNU/GPL</license>
+	<description></description>
+	<metadata>
+		<name>Examplish (Example)</name>
+		<tag>xx-XX</tag>
+		<rtl>0</rtl>
+		<locale>xx_XX.utf8, xx_XX.UTF-8, xx_XX, xx, examplish, examplish-example</locale>
+		<winCodePage>iso-8859-1</winCodePage>
+		<backwardLang>examplish</backwardLang>
+		<pdfFontName>freesans</pdfFontName>
+	</metadata>
+	<params />
+</metafile>
